# rust-axum-template

./: .env.example  .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  prisma.config.ts
crates/database/: Cargo.toml
crates/database/prisma/: schema.prisma
crates/database/src/: lib.rs
crates/database/src/entities/: setting.rs  user.rs
crates/database/src/repositories/: settings.rs  users.rs
crates/http-server/: Cargo.toml
crates/http-server/docs/: openapi.html  openapi.yml
crates/http-server/src/: exception.rs  main.rs
crates/http-server/src/extractors/: auth.rs  mod.rs  state.rs  validator.rs
crates/http-server/src/handlers/users/: me.rs
crates/http-server/src/routers/: users.rs
crates/shared/: Cargo.toml
crates/shared/src/: env.rs  lib.rs  result.rs  tracing.rs
