[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-macros = { workspace = true }
jsonwebtoken = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

shared = { path = "../shared" }
database = { path = "../database" }
